--- a/posts/2019-03-Deep-learning-tutorial/just-another-deep-learning-tutorial.ipynb
+++ b/posts/2019-03-Deep-learning-tutorial/just-another-deep-learning-tutorial.ipynb
@@ -1,5 +1,15 @@
 {
  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aavella77/fft/blob/main/fft_learn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },  
   {
    "cell_type": "markdown",
    "metadata": {
@@ -9,8 +19,8 @@
    },
    "source": [
     "\n",
-    "*Published on March 10, 2019\n",
-    "*\n",
+    "Published on March 10, 2019\n",
+    "\n",
     "\n",
     "I hope these notes may help someone trying to get started with Deep Learning.  Not sure we need another tutorial, so I'll try to add some value with these Deep Learning Notes.  Hope you follow along...\n",
     "\n",
