--- a/posts/2024-08-prompt-ai/notebooks/l8-chatbot.ipynb
+++ b/posts/2024-08-prompt-ai/notebooks/l8-chatbot.ipynb
@@ -23,6 +23,7 @@
    },
    "outputs": [],
    "source": [
+    "!pip install openai\n",
     "import os\n",
     "import openai\n",
     "from dotenv import load_dotenv, find_dotenv\n",
